--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     background-color: #f5f5f7;
     color: #333;
@@ -22,7 +22,7 @@ body {
     font-size: 24px;
     margin-bottom: 20px;
     font-weight: bold;
-    color: #eaeaea; /* Cor do texto ajustada para preto */
+    color: #eaeaea; /* Cor do texto ajustada para preto 
 }
 .agenda-form {
     display: flex;
@@ -110,4 +110,4 @@ body {
 }
 .agenda-list li button:hover {
     background-color: #d32f2f;
-}
+} */
