--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+<!--Este arquivo é o "View" da aplicação, onde os dados são expostos e a interação com o usuário ocorre.-->
 {% extends "home.html" %}
 
 {% block content %}
