--- a/templates/index.html
+++ b/templates/index.html
@@ -3,17 +3,34 @@
 
 {% block content %}
     <form method="POST">
-        <input type="text" name="titulo" id="titulo" placeholder="Título da Tarefa" value="{{ tarefa.titulo if tarefa else '' }}" required>
-        <input type="date" name="data_conclusao" id="data_conclusao" value="{{ tarefa.data_conclusao if tarefa else '' }}">
-        <button type="submit">{{ 'Atualizar' if tarefa else 'Adicionar' }}</button>
+        <input type="hidden" name="idTarefa" value="{{ tarefa.id if tarefa else ''}}">
+        <input type="text" name="titulo" id="titulo" placeholder="Título da tarefa" required>
+        <input type="date" name="data_conclusao" id="data_conclusao">
+        <button type="submit">{{ 'Salvar' if tarefa else 'Adicionar' }}</button>
     </form>
+
     <ul>
         {% for tarefa in tarefas %}
         <li>
-            {{ tarefa.titulo }} - {{ tarefa.data_conclusao }}
+            {{ tarefa.titulo }} - {{ tarefa.data_conclusao }} 
+            <a href="{{ url_for('update', idTarefa=tarefa.id) }}">Editar</a>
             <a href="{{ url_for('delete', idTarefa=tarefa.id) }}">Apagar</a>
-            <a href="{{ url_for('edit', idTarefa=tarefa.id) }}">Editar</a>
         </li>
         {% endfor %}
     </ul>
 {% endblock %}
+
+<!-- 
+view traz a informação para a tela
+controler recebe, manda pro modelo, view pega as informações carrega no formulario
+edit é adptação da criação de uma nova tarefa
+rota update usar if e else - POST salvar tarefa GET trazer a informação para o formulario
+
+1 - app recebe a informaçaõ que clicou em editar
+2 - tarefa busca a id da tarefa
+3 - vai para o index para exibir a tarefa no formulário
+
+4 - app recebe a alteração
+5 - manda para a tarefa para executar a função atualizar
+6 - vai para o index para mandar a tarefa editada de volta para a lista
+-->
