--- a/templates/index.html
+++ b/templates/index.html
@@ -3,34 +3,21 @@
 
 {% block content %}
     <form method="POST">
-        <input type="hidden" name="idTarefa" value="{{ tarefa.id if tarefa else ''}}">
-        <input type="text" name="titulo" id="titulo" placeholder="Título da tarefa" required>
-        <input type="date" name="data_conclusao" id="data_conclusao">
-        <button type="submit">{{ 'Salvar' if tarefa else 'Adicionar' }}</button>
+        <input type="text" name="titulo" id="titulo" placeholder="Título da tarefa" value="{{ tarefa_selecionada.titulo if tarefa_selecionada else '' }}" required>
+        <input type="date" name="data_conclusao" id="data_conclusao" value="{{ tarefa_selecionada.data_conclusao if tarefa_selecionada else '' }}">
+        <button type="submit">{{ 'Salvar' if tarefa_selecionada else 'Adicionar' }}</button>
     </form>
 
+    {% if tarefas %}
+    <h2>Lista de Tarefas</h2>
     <ul>
         {% for tarefa in tarefas %}
-        <li>
-            {{ tarefa.titulo }} - {{ tarefa.data_conclusao }} 
-            <a href="{{ url_for('update', idTarefa=tarefa.id) }}">Editar</a>
-            <a href="{{ url_for('delete', idTarefa=tarefa.id) }}">Apagar</a>
-        </li>
+            <li>
+                {{ tarefa.titulo }} - {{ tarefa.data_conclusao }}
+                <a href="{{ url_for('delete', idTarefa=tarefa.id) }}">Apagar</a>
+                <a href="{{ url_for('editar', idTarefa=tarefa.id) }}">Editar</a>
+            </li>
         {% endfor %}
     </ul>
+    {% endif %}
 {% endblock %}
-
-<!-- 
-view traz a informação para a tela
-controler recebe, manda pro modelo, view pega as informações carrega no formulario
-edit é adptação da criação de uma nova tarefa
-rota update usar if e else - POST salvar tarefa GET trazer a informação para o formulario
-
-1 - app recebe a informaçaõ que clicou em editar
-2 - tarefa busca a id da tarefa
-3 - vai para o index para exibir a tarefa no formulário
-
-4 - app recebe a alteração
-5 - manda para a tarefa para executar a função atualizar
-6 - vai para o index para mandar a tarefa editada de volta para a lista
--->
